--- a/css/categorias.css
+++ b/css/categorias.css
@@ -2,3 +2,18 @@ body{
     background-color: #24303C;
 }
 
+.categorys{
+    background-color:white;
+    padding: 1em;
+}
+.menu .item{
+    display:inline-block;
+}
+.Mar{
+    margin-top: 1em;
+}
+
+.container .op{
+    background-color: rgb(255, 127, 127);
+    border-radius:50%;
+}
