--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,6 @@
 body{
     background-color: #24303C;
-    text-align: center;
+
 }
 
 
@@ -19,8 +19,8 @@ body{
    
 
 }
-.Ms{
-    text-align: left;
+.Esp{
+    margin-top: 5px;
 
 }
 
