--- a/css/register.css
+++ b/css/register.css
@@ -5,6 +5,7 @@ body{
 .container{
     margin-top: 1em;
     margin-bottom: 2em;
+    width: 640px;
 }
 .caja-registro {
     padding: 1.5em;
@@ -15,4 +16,8 @@ body{
 
 }
 
+.Esp{
+    margin-top: 5px;
+
+}
 
