--- a/css/vender.css
+++ b/css/vender.css
@@ -1,17 +1,16 @@
 body{
     background-color:#24303C;
 }
-
-.caja-producto{
-    margin: 6em;
+.container {
+     width: 840px;
+    margin-top: 1em;
+    margin-bottom:2em;
 }
-.MC {
+.caja-producto{
+
     padding: 2em;
     background-color: whitesmoke;
     border-radius: 20px;
-    text-align: left;
-    width: 560px;
-    border-color: aliceblue;
 
 }
 
