--- a/css/stock.css
+++ b/css/stock.css
@@ -2,3 +2,41 @@ body{
     background-color: #24303C;
 }
 
+.container{
+    margin-top: 1em;
+    margin-bottom: 2em;
+    width: 640px;
+}
+.caja-registro{
+    padding: 1.5em;
+    background-color: whitesmoke;
+    border-radius: 20px;
+}
+.item-principal{
+    width: 180px;
+    background-color:#118adb;
+    padding: 1em;
+    text-align:center;
+    border-radius:10px
+}
+.fila{
+        
+    list-style: none;
+   
+    background-color: #1178bd;
+    padding: 1em;
+    border-radius: 10px;
+    
+    }
+
+
+
+.position img {
+    width: 64px;
+}
+
+.position img:hover {
+    background-color:blueviolet;
+    padding: 0.2em;
+    width: 64px;
+}
