--- a/css/stock.css
+++ b/css/stock.css
@@ -13,30 +13,32 @@ body{
     border-radius: 20px;
 }
 .item-principal{
-    width: 180px;
-    background-color:#118adb;
+    width: 360px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background-color:#00d9ffdc;
     padding: 1em;
     text-align:center;
-    border-radius:10px
+    border-radius:10px;
 }
 .fila{
-        
-    list-style: none;
-   
-    background-color: #1178bd;
     padding: 1em;
-    border-radius: 10px;
-    
+    list-style: none; 
+
     }
 
 
 
 .position img {
-    width: 64px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 0.2em;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+    width: 128px;
 }
 
 .position img:hover {
-    background-color:blueviolet;
-    padding: 0.2em;
-    width: 64px;
+    
+    
+    background-color:#a4eff5;
+    width: 128px;
 }
