--- a/css/productos.css
+++ b/css/productos.css
@@ -4,6 +4,8 @@ body{
 
 .MS{
     background-color: white;
-    padding: 2em;
+    margin-left: 1em;
     border-radius: 10px;
+    margin-right: 1em;
+    padding: 0.5em;
 }
