--- a/css/vender.css
+++ b/css/vender.css
@@ -13,5 +13,21 @@ body{
     border-radius: 20px;
 
 }
+.Cimg{
+    text-align: center;
+}
+ .img{
+    
+    width: 120px;
+    height:auto;
+}
+.Cimg .btn {
+    margin-top: 5px;
+}
 
 
+
+.regi{
+    color: white;
+    font-size: 28px;
+}
