--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,10 @@ body{
 
 .Stockline{
     margin-top: 2em;
-    padding: 2em 1em;
+    padding:  1em;
     background-color: #f3f3f3;
     border-radius: 20px;
+    
 }
 /*? ajuste de productos*/
 
